# atomic-commits

./: .gitignore  LICENSE  README.md  implementation.md  operation.md  pyproject.toml
src/atomic_commits/: __init__.py  cli.py  committer.py  config.py  diff_parser.py  errors.py  fingerprints.py  flows.py  git_client.py  logging.py  models.py  output.py  planner.py  prompts.py  safety.py  scanner.py  selftest.py  session.py  stager.py
src/atomic_commits/providers/: __init__.py  anthropic.py  base.py  openai_compatible.py
src/atomic_commits/validators/: __init__.py  commit_messages.py  plan_schema.py
tests/: conftest.py
tests/fixtures/diffs/: .gitkeep
tests/integration/: helpers.py  test_apply_compact.py  test_apply_verbose.py  test_binary_files.py  test_dry_run.py  test_path_filters.py  test_real_git_diffs.py  test_rename_delete_mode_changes.py  test_repo_subdir.py  test_resume.py  test_selftest_harness.py  test_staged_policy.py  test_untracked_files.py
tests/unit/: test_commit_message_validator.py  test_diff_parser.py  test_fingerprints.py  test_plan_schema.py  test_planner.py  test_provider_json.py  test_safety.py
