[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "atomic-commits"
version = "0.1.0.2"
description = "Turn a dirty Git worktree into meaningful atomic commits using AI."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "atc contributors" }]
keywords = ["git", "commits", "ai", "cli", "atomic"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Version Control :: Git",
]
dependencies = [
  "typer>=0.12",
  "rich>=13.7",
  "pydantic>=2.6",
  "httpx>=0.27",
  "typing-extensions>=4.9",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "ruff>=0.5",
  "mypy>=1.10",
]

[project.scripts]
atc = "atomic_commits.cli:app"

[project.urls]
Homepage = "https://gitlab.com/info4176-group/atc-cli"
Repository = "https://gitlab.com/info4176-group/atc-cli"

[tool.hatch.build.targets.wheel]
packages = ["src/atomic_commits"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "W"]
ignore = ["E501", "B008"]

[tool.mypy]
python_version = "3.11"
warn_unused_ignores = true
ignore_missing_imports = true
files = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
